--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dream Step | Best plateform for any kinds of Shoes & Slipper</title>
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -57,7 +57,7 @@
                 >
                   BUY</button
                 ><button
-                  class="bg-slate-700 hover:bg-slate-600 duration-300 px-5 py-2 tracking-wide rounded-lg uppercase"
+                  class="bg-slate-700 hover:bg-slate-600 duration-300 px-5 py-2 tracking-wide rounded-lg capitalize"
                 >
                   Check Out
                 </button>
@@ -146,37 +146,37 @@
         <i class="fa-solid fa-xmark text-3xl text-white menuBar"></i>
       </div>
       <ul class="text-white px-[3vh] pt[4vh]">
-        <a href="./products.html" class="uppercase">
+        <a href="./products.html" class="capitalize">
           <li
-            class="text-[2vh] uppercase tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center navProducts"
+            class="text-[2vh] capitalize tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center navProducts"
           >
             Shoes<i class="fa-solid fa-plus"></i>
           </li>
         </a>
         <a href="./products.html">
           <li
-            class="text-[2vh] uppercase tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center navProducts"
+            class="text-[2vh] capitalize tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center navProducts"
           >
             Slippers<i class="fa-solid fa-plus"></i>
           </li>
         </a>
         <a href="./brand.html">
           <li
-            class="text-[2vh] uppercase tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center"
+            class="text-[2vh] capitalize tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center"
           >
             Brands<i class="fa-solid fa-plus"></i>
           </li>
         </a>
         <a href="./my-order.html">
           <li
-            class="text-[2vh] uppercase tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center"
+            class="text-[2vh] capitalize tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center"
           >
             My Orders<i class="fa-solid fa-plus"></i>
           </li>
         </a>
         <a href="./help.html">
           <li
-            class="text-[2vh] uppercase tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center"
+            class="text-[2vh] capitalize tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center"
           >
             Help<i class="fa-solid fa-plus"></i>
           </li>
@@ -236,21 +236,21 @@
 
         <nav class="lg:flex hidden">
           <ul class="flex justify-center items-center gap-5">
-            <a href="./products.html" class="uppercase"
+            <a href="./products.html" class="capitalize"
               ><li
                 class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer rounded-3xl navProducts"
               >
                 Shoes
               </li></a
             >
-            <a href="./products.html" class="uppercase">
+            <a href="./products.html" class="capitalize">
               <li
                 class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer rounded-3xl navProducts"
               >
                 Slippers
               </li>
             </a>
-            <a href="./brand.html" class="uppercase">
+            <a href="./brand.html" class="capitalize">
               <li
                 class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer rounded-3xl navProducts"
               >
@@ -387,7 +387,7 @@
       <div
         class="header flex justify-between items-center border-b-[.5px] border-slate-500 pb-4"
       >
-        <h2 class="text-2xl uppercase tracking-wider">Add To Cart</h2>
+        <h2 class="text-2xl capitalize tracking-wider">Add To Cart</h2>
         <i
           class="fa-solid fa-xmark text-2xl lg:py-2 py-1 lg:px-4 px-3 rounded-full cursor-pointer hover:bg-slate-800 addToCartCloseBtn"
         ></i>
@@ -403,7 +403,7 @@
             alt=""
             class="w-32 pb-10"
           />
-          <p class="text-3xl tracking-wide uppercase">Your Cart Is Empty</p>
+          <p class="text-3xl tracking-wide capitalize">Your Cart Is Empty</p>
         </div>
       </div>
     </div>
@@ -489,7 +489,7 @@
               class="product-description flex justify-between px-4 items-center py-4"
             >
               <div class="product-name flex flex-col gap-2">
-                <h4 class="text-xl font-bold uppercase">sporty casuals</h4>
+                <h4 class="text-xl font-bold capitalize">sporty casuals</h4>
                 <p class="flex gap-4">
                   Rs.1599
                   <strike class="text-gray-400 tracking-wide">Rs.4399</strike>
@@ -519,7 +519,7 @@
               class="product-description flex justify-between px-4 items-center py-4"
             >
               <div class="product-name flex flex-col gap-2">
-                <h4 class="text-xl font-bold uppercase">dress loafers</h4>
+                <h4 class="text-xl font-bold capitalize">dress loafers</h4>
                 <p class="flex gap-4">
                   Rs.1979
                   <strike class="text-gray-400 tracking-wide">Rs.3499</strike>
@@ -549,7 +549,7 @@
               class="product-description flex justify-between px-4 items-center py-4"
             >
               <div class="product-name flex flex-col gap-2">
-                <h4 class="text-xl font-bold uppercase">easy walk slip ons</h4>
+                <h4 class="text-xl font-bold capitalize">easy walk slip ons</h4>
                 <p class="flex gap-4">
                   Rs.1889
                   <strike class="text-gray-400 tracking-wide">Rs.4199</strike>
@@ -579,7 +579,7 @@
               class="product-description flex justify-between px-4 items-center py-4"
             >
               <div class="product-name flex flex-col gap-2">
-                <h4 class="text-xl font-bold uppercase">light walkers</h4>
+                <h4 class="text-xl font-bold capitalize">light walkers</h4>
                 <p class="flex gap-4">
                   Rs.1499
                   <strike class="text-gray-400 tracking-wide">Rs.3249</strike>
@@ -670,7 +670,7 @@
             Striped Fusion Flips
           </h2>
           <a
-            href=""
+            href="#"
             class="py-[.8rem] px-[1.1rem] rounded-full bg-slate-800 hover:bg-slate-700 cursor-pointer text-white"
             ><i class="fa-solid fa-arrow-right lg:text-[1rem]"></i
           ></a>
@@ -686,7 +686,7 @@
             </div>
             <div class="overflow-hidden border-b-[1px] border-slate-700">
               <img
-                src="https://neemans.com/cdn/shop/files/ND-Trio-BluenRed_WebOptimized_a_1000x.jpg?v=1705990913"
+                src="https://neemans.com/cdn/shop/files/ND_-_Trio_-_Brown_n_Orange_Web_Optimized_a_30590649-6da1-4625-bc25-d05e0300f945_800x.jpg?v=1724932474"
                 alt=""
                 class="hover:scale-110"
               />
@@ -695,8 +695,8 @@
               class="product-description flex justify-between px-4 items-center py-4"
             >
               <div class="product-name flex flex-col gap-2">
-                <h4 class="text-xl font-bold uppercase">
-                  Striped Fusion Flips
+                <h4 class="text-xl font-bold">
+                  Striped Fusion : Brown
                 </h4>
                 <p class="flex gap-4">
                   Rs.699
@@ -718,7 +718,7 @@
             </div>
             <div class="overflow-hidden border-b-[1px] border-slate-700">
               <img
-                src="https://neemans.com/cdn/shop/files/ND-Trio-BrownnOrange_WebOptimized_a_1000x.jpg?v=1705990913"
+                src="https://neemans.com/cdn/shop/files/ND_-_Trio_-_Blue_n_Orange_Web_Optimized_a_24b7e025-c6fe-4857-beed-5b02146b2a79_800x.jpg?v=1724932474"
                 alt=""
                 class="hover:scale-110"
               />
@@ -727,8 +727,8 @@
               class="product-description flex justify-between px-4 items-center py-4"
             >
               <div class="product-name flex flex-col gap-2">
-                <h4 class="text-xl font-bold uppercase">
-                  Striped Fusion Flips
+                <h4 class="text-xl font-bold">
+                  Striped Fusion : Ivory Orange
                 </h4>
                 <p class="flex gap-4">
                   Rs.699
@@ -750,7 +750,7 @@
             </div>
             <div class="overflow-hidden border-b-[1px] border-slate-700">
               <img
-                src="https://neemans.com/cdn/shop/files/ND-Trio-BluenOrange_WebOptimized_a_1000x.jpg?v=1705908615"
+                src="https://neemans.com/cdn/shop/files/ND_-_Trio_-_Green_n_Black_Web_Optimized_a_a83fc1dc-8d0d-45c1-92b9-b41dc7a9db14_800x.jpg?v=1724932474"
                 alt=""
                 class="hover:scale-110"
               />
@@ -759,8 +759,8 @@
               class="product-description flex justify-between px-4 items-center py-4"
             >
               <div class="product-name flex flex-col gap-2">
-                <h4 class="text-xl font-bold uppercase">
-                  Striped Fusion Flips
+                <h4 class="text-xl font-bold">
+                  Striped Fusion : Green Ivory
                 </h4>
                 <p class="flex gap-4">
                   Rs.699
@@ -782,7 +782,7 @@
             </div>
             <div class="overflow-hidden border-b-[1px] border-slate-700">
               <img
-                src="https://neemans.com/cdn/shop/files/ND-Trio-GreennBlack_WebOptimized_a_1000x.jpg?v=1705990913"
+                src="https://neemans.com/cdn/shop/files/ND_-_Trio_-_Blue_n_Red_Web_Optimized_a_f0568dbe-f59c-41ea-883b-bb9752e1fd90_800x.jpg?v=1724932473"
                 alt=""
                 class="hover:scale-110"
               />
@@ -791,8 +791,8 @@
               class="product-description flex justify-between px-4 items-center py-4"
             >
               <div class="product-name flex flex-col gap-2">
-                <h4 class="text-xl font-bold uppercase">
-                  Striped Fusion Flips
+                <h4 class="text-xl font-bold">
+                  Striped Fusion : Blue Red
                 </h4>
                 <p class="flex gap-4">
                   Rs.699
@@ -889,7 +889,7 @@
               class="product-description flex justify-between px-4 items-center py-4"
             >
               <div class="product-name flex flex-col gap-2">
-                <h4 class="text-xl font-bold uppercase">casual trainers</h4>
+                <h4 class="text-xl font-bold capitalize">casual trainers</h4>
                 <p class="flex gap-4">
                   Rs.1575
                   <strike class="text-gray-400 tracking-wide">Rs.3499</strike>
@@ -919,7 +919,7 @@
               class="product-description flex justify-between px-4 items-center py-4"
             >
               <div class="product-name flex flex-col gap-2">
-                <h4 class="text-xl font-bold uppercase">sole max slip ons</h4>
+                <h4 class="text-xl font-bold capitalize">sole max slip ons</h4>
                 <p class="flex gap-4">
                   Rs.1399
                   <strike class="text-gray-400 tracking-wide">Rs.2999</strike>
@@ -949,7 +949,7 @@
               class="product-description flex justify-between px-4 items-center py-4"
             >
               <div class="product-name flex flex-col gap-2">
-                <h4 class="text-xl font-bold uppercase">the loungesters</h4>
+                <h4 class="text-xl font-bold capitalize">the loungesters</h4>
                 <p class="flex gap-4">
                   Rs.1099
                   <strike class="text-gray-400 tracking-wide">Rs.3799</strike>
@@ -979,7 +979,7 @@
               class="product-description flex justify-between px-4 items-center py-4"
             >
               <div class="product-name flex flex-col gap-2">
-                <h4 class="text-xl font-bold uppercase">tread basics</h4>
+                <h4 class="text-xl font-bold capitalize">tread basics</h4>
                 <p class="flex gap-4">
                   Rs.1099
                   <strike class="text-gray-400 tracking-wide">Rs.3699</strike>
@@ -1040,7 +1040,7 @@
             <h2
               class="title-font font-medium tracking-wide text-xl lg:text-2xl mb-3"
             >
-              SHOP BY CATEGORY
+              Shop By Category
             </h2>
             <nav class="list-none mb-10">
               <li>
@@ -1073,7 +1073,7 @@
             <h2
               class="title-font font-medium tracking-wide text-xl lg:text-2xl mb-3"
             >
-              SHOP BY TYPE
+              Shop By Type
             </h2>
             <nav class="list-none mb-10">
               <li>
@@ -1106,7 +1106,7 @@
             <h2
               class="title-font font-medium tracking-wide text-xl lg:text-2xl mb-3"
             >
-              INFORMATION
+              Information
             </h2>
             <nav class="list-none mb-10">
               <li>
@@ -1139,7 +1139,7 @@
             <h2
               class="title-font font-medium tracking-wide text-xl lg:text-2xl mb-3"
             >
-              GUIDES
+              Guides
             </h2>
             <nav class="list-none mb-10">
               <li>
@@ -1181,7 +1181,7 @@
               rel="noopener noreferrer"
               class="text-gray-500 ml-1"
               target="_blank"
-              >@rohankumar</a
+              >Rohan Kumar Mahto</a
             >
           </p>
           <span
