--- a/my-order.html
+++ b/my-order.html
@@ -46,35 +46,35 @@
       <ul class="text-white px-[3vh] pt[4vh]">
         <a href="./products.html">
           <li
-            class="text-[2vh] uppercase tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center navProducts"
+            class="text-[2vh] capitalize tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center navProducts"
           >
             Shoes<i class="fa-solid fa-plus"></i>
           </li>
         </a>
         <a href="./products.html">
           <li
-            class="text-[2vh] uppercase tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center navProducts"
+            class="text-[2vh] capitalize tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center navProducts"
           >
             Slippers<i class="fa-solid fa-plus"></i>
           </li>
         </a>
         <a href="./brand.html">
           <li
-            class="text-[2vh] uppercase tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center"
+            class="text-[2vh] capitalize tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center"
           >
             Brands<i class="fa-solid fa-plus"></i>
           </li>
         </a>
         <a href="./my-order.html">
           <li
-            class="text-[2vh] uppercase tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center"
+            class="text-[2vh] capitalize tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center"
           >
             My Orders<i class="fa-solid fa-plus"></i>
           </li>
         </a>
         <a href="./help.html">
           <li
-            class="text-[2vh] uppercase tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center"
+            class="text-[2vh] capitalize tracking-wider py-[3vh] border-b-[1px] flex justify-between items-center"
           >
             Help<i class="fa-solid fa-plus"></i>
           </li>
@@ -138,35 +138,35 @@
           <ul class="flex justify-center items-center gap-5">
             <a href="./products.html"
               ><li
-                class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer rounded-3xl uppercase navProducts shoesActive"
+                class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer rounded-3xl capitalize navProducts shoesActive"
               >
                 Shoes
               </li></a
             >
             <a href="./products.html">
               <li
-                class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer rounded-3xl uppercase navProducts slipperActive"
+                class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer rounded-3xl capitalize navProducts slipperActive"
               >
                 Slippers
               </li>
             </a>
             <a href="./brand.html">
               <li
-                class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer rounded-3xl uppercase"
+                class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer rounded-3xl capitalize"
               >
                 Brands
               </li>
             </a>
             <a href="./my-order.html">
               <li
-                class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer bg-slate-800 rounded-3xl uppercase"
+                class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer bg-slate-800 rounded-3xl capitalize"
               >
                 My Order
               </li>
             </a>
             <a href="./help.html">
               <li
-                class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer rounded-3xl uppercase"
+                class="text-[1rem] tracking-wider px-4 py-2 cursor-pointer rounded-3xl capitalize"
               >
                 Help
               </li>
@@ -287,7 +287,7 @@
       <div
         class="header flex justify-between items-center border-b-[.5px] border-slate-500 pb-4"
       >
-        <h2 class="text-2xl uppercase tracking-wider">Add To Cart</h2>
+        <h2 class="text-2xl capitalize tracking-wider">Add To Cart</h2>
         <i
           class="fa-solid fa-xmark text-2xl lg:py-2 py-1 lg:px-4 px-3 rounded-full cursor-pointer hover:bg-slate-800 addToCartCloseBtn"
         ></i>
@@ -303,7 +303,7 @@
             alt=""
             class="w-32 pb-10"
           />
-          <p class="text-3xl tracking-wide uppercase">Your Cart Is Empty</p>
+          <p class="text-3xl tracking-wide capitalize">Your Cart Is Empty</p>
         </div>
       </div>
     </div>
@@ -350,7 +350,7 @@
           alt=""
           class="w-40"
         />
-        <p class="uppercase text-slate-900 lg:text-[2rem] font-semibold">
+        <p class="capitalize text-slate-900 lg:text-[2rem] font-semibold">
           Your Buy Page is Empty
         </p>
       </div>
@@ -358,7 +358,7 @@
       <!-- buy items page empty section end  -->
     </article>
 
-    <!-- for footer section  -->
+    <!-- footer section  -->
 
     <footer class="text-gray-200 body-font bg-slate-900">
       <div>
@@ -378,7 +378,7 @@
             <h2
               class="title-font font-medium tracking-wide text-xl lg:text-2xl mb-3"
             >
-              SHOP BY CATEGORY
+              Shop By Category
             </h2>
             <nav class="list-none mb-10">
               <li>
@@ -411,7 +411,7 @@
             <h2
               class="title-font font-medium tracking-wide text-xl lg:text-2xl mb-3"
             >
-              SHOP BY TYPE
+              Shop By Type
             </h2>
             <nav class="list-none mb-10">
               <li>
@@ -444,7 +444,7 @@
             <h2
               class="title-font font-medium tracking-wide text-xl lg:text-2xl mb-3"
             >
-              INFORMATION
+              Information
             </h2>
             <nav class="list-none mb-10">
               <li>
@@ -477,7 +477,7 @@
             <h2
               class="title-font font-medium tracking-wide text-xl lg:text-2xl mb-3"
             >
-              GUIDES
+              Guides
             </h2>
             <nav class="list-none mb-10">
               <li>
@@ -519,7 +519,7 @@
               rel="noopener noreferrer"
               class="text-gray-500 ml-1"
               target="_blank"
-              >@rohankumar</a
+              >Rohan Kumar Mahto</a
             >
           </p>
           <span
